# ghc-23138-repro

./: 927-shell.nix  944-shell.nix  LICENSE  cabal.project  repro.cabal  shell.nix
src/: Repro.hs
