cabal-version:  2.2
name:           repro
version:        0
license:        MIT
license-file:   LICENSE
category:       Test
build-type:     Simple

library
  build-depends: base
               , double-conversion
               , template-haskell
               , text
               , system-cxx-std-lib == 1.0
  exposed-modules: Repro
  default-language: Haskell2010
  hs-source-dirs: src
